# DiscSplit

./: CMakeLists.txt  README.md  main.c
FileAnalysis/: fileAnalysis.c  fileAnalysis.h
MergeFiles/: mergeFiles.c  mergeFiles.h
SplitFileContent/: splitFileContent.c  splitFileContent.h
include/: fileAnalysis.h  mergeFiles.h  splitFileContent.h
src/: fileAnalysis.c  main.c  mergeFiles.c  splitFileContent.c
